syntax = "proto3";
package pbusers;

option go_package = "./pbusers";

message User {
    string id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
}

message CreateUserRequest {
    string name = 1;
    string email = 2; 
    string password = 3; 
}

message GetUserRequest {
    string id = 1;
}

message GetUserByCredentialsRequest {
    string email = 1;
    string password = 2;
}



service UserService {
    rpc CreateUser(CreateUserRequest) returns (User);
    rpc GetUserById(GetUserRequest) returns (User);
    rpc GetUserByCredentials(GetUserByCredentialsRequest) returns (User);
}